CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(logger LANGUAGES CXX)

ADD_LIBRARY(logger INTERFACE)

SET_TARGET_PROPERTIES(logger PROPERTIES
                      INTERFACE_CXX_STANDARD 17
                      INTERFACE_CXX_STANDARD_REQUIRED YES
                      INTERFACE_CXX_EXTENSIONS NO)

TARGET_INCLUDE_DIRECTORIES(logger INTERFACE header)

ADD_EXECUTABLE(test-logger test/tests.cc)
SET_TARGET_PROPERTIES(test-logger PROPERTIES
                      CXX_STANDARD 17
                      CXX_STANDARD_REQUIRED YES
                      CXX_EXTENSIONS NO)
TARGET_LINK_LIBRARIES(test-logger logger Catch2)

ENABLE_TESTING()
ADD_TEST(test-logger test-logger)

