CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(long LANGUAGES CXX)

IF(TARGET long)
    RETURN()
ENDIF()

IF(NOT TARGET Catch2)
    ADD_SUBDIRECTORY("../catch/" Catch2)
ENDIF()

ADD_LIBRARY(long INTERFACE)

SET_TARGET_PROPERTIES(long PROPERTIES
                      INTERFACE_CXX_STANDARD 17
                      INTERFACE_CXX_STANDARD_REQUIRED YES
                      INTERFACE_CXX_EXTENSIONS NO)

TARGET_INCLUDE_DIRECTORIES(long INTERFACE header)

ADD_EXECUTABLE(test-long test/tests.cc)
SET_TARGET_PROPERTIES(test-long PROPERTIES
                      CXX_STANDARD 17
                      CXX_STANDARD_REQUIRED YES
                      CXX_EXTENSIONS NO)
TARGET_LINK_LIBRARIES(test-long long Catch2)

ENABLE_TESTING()
ADD_TEST(test-long test-long)

