CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(menu LANGUAGES CXX)

ADD_LIBRARY(menu INTERFACE)

SET_TARGET_PROPERTIES(menu PROPERTIES
                      INTERFACE_CXX_STANDARD 17
                      INTERFACE_CXX_STANDARD_REQUIRED YES
                      INTERFACE_CXX_EXTENSIONS NO)

TARGET_INCLUDE_DIRECTORIES(menu INTERFACE header)

ADD_EXECUTABLE(test-menu test/tests.cc)
SET_TARGET_PROPERTIES(test-menu PROPERTIES
                      CXX_STANDARD 17
                      CXX_STANDARD_REQUIRED YES
                      CXX_EXTENSIONS NO)
TARGET_LINK_LIBRARIES(test-menu menu Catch2)

ENABLE_TESTING()
ADD_TEST(test-menu test-menu)

